Revision history for DBIx::Class

    * New Features / Changes
        - Issue a warning when DateTime objects are passed to ->search

    * Fixes
        - Fix SkipFirst and FirstSkip limit dialects (Informix and Firebird)

    * Misc
        - Codebase is now trailing-whitespace-free

0.08196 2011-11-29 05:35 (UTC)
    * Fixes
        - Fix tests for DBD::SQLite >= 1.34.
        - Fix test failures with DBICTEST_SQLITE_USE_FILE set
        - Fix the find() condition heuristics being invoked even when the
          call defaults to 'primary' (i.e. when invoked with bare values)
        - Throw much clearer error on incorrect inflation spec
        - Fix incorrect storage behavior when first call on a fresh schema
          is with_deferred_fk_checks
        - Fix incorrect dependency on Test::Simple/Builder (RT#72282)
        - Fix uninitialized warning in ::Storage::Sybase::ASE
        - Improve/cache  DBD-specific datatype bind checks (also solves a
          nasty memleak with version.pm on multiple ->VERSION invocations)
        - The internal carp module now correctly skips CAG frames when
          reporting a callsite
        - Fix test failures on perl < 5.8.7 and new Package::Stash::XS
        - Fix TxnScopeGuard not behaving correctly when $@ is set at the
          time of $guard instantiation
        - Fix the join/prefetch resolver when dealing with ''/undef/()
          relation specifications

    * Misc
        - No longer depend on Variable::Magic now that a pure-perl
          namespace::clean is available
        - Drop Oracle's Math::BigInt req down to 1.80 - no fixes concerning
          us were made since

0.08195 2011-07-27 16:20 (UTC)
    * Fixes
        - Fix horrible oversight in the Oracle sqlmaker when dealing with
          queries updating blobs (RT#69829)

0.08194 2011-07-20 16:10 (UTC)
    * Fixes
        - Fix $rs->populate([]) to be a no-op rather than an exception